# course_work

./: .env.example  .flake8  README.md  pyproject.toml
data/: user_settings.json
src/: config.py  logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py
